--- a/src/components/ticTacToe/ticTacToe.css
+++ b/src/components/ticTacToe/ticTacToe.css
@@ -32,8 +32,8 @@
 
 .boxes {
   display: flex;
-  height: 180px;
-  width: 180px;
+  height: 160px;
+  width: 160px;
   background: #1f3540;
   border: 4px solid #0f1b21;
   border-radius: 12px;
@@ -54,4 +54,17 @@
 .title img {
   padding: 20px 20px;
   height: 50px;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    padding: 20px;
+  }
+  .boxes {
+    height: 140px;
+    width: 140px;
+  }
+  .title {
+    font-size: 38px;
+  }
 }
